Integrate Quill styles into Angular configuration, update start script to use port 4001, enhance AppComponent loading display with logo, add new routes for hero and business profile components, and improve upload file component for better file handling and display. Additionally, refactor safe pipe to support multiple content types and update category list component to handle image data more effectively.

--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,8 @@
                             }
                         ],
                         "styles": [
+                            "node_modules/quill/dist/quill.snow.css",
+                            "node_modules/quill/dist/quill.bubble.css",
                             "src/styles.scss"
                         ],
                         "scripts": []
