Enhance application localization and UI responsiveness
- Integrated ngx-translate for multi-language support across various components, including user, product, and order management.
- Updated UI elements to utilize translation pipes for dynamic text rendering, improving accessibility for non-English users.
- Refactored multiple components to ensure consistent styling and responsiveness, including adjustments to margin and padding for better layout in RTL contexts.
- Added new fields and improved existing ones in forms to enhance user experience and clarity.
- Implemented RTL layout fixes in SCSS files to support right-to-left languages effectively.

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
                         "assets": [
                             {
                                 "glob": "**/*",
-                                "input": "src/assets"
+                                "input": "src/assets",
+                                "output": "/assets"
                             }
                         ],
                         "styles": [
@@ -76,6 +77,9 @@
                 },
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
+                    "options": {
+                        "port": 4001
+                    },
                     "configurations": {
                         "production": {
                             "buildTarget": "sakai-ng:build:production"
